k8s/namespaces/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
      name: bazarr-ui
  type: ClusterIP
