k8s/namespaces/media/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-bazarr-https
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
      services:
        - name: bazarr
          port: 6767
  tls: 
    secretName: oglesby-io-tls
